// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager gas tests ERC20 tokens #initialize initialize pool with no hooks and no protocol fee 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 55104,
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint above current price add to position existing 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 126974,
=======
  "calldataByteLength": 260,
  "gasUsed": 125269,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint above current price new position mint first in range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 196391,
=======
  "calldataByteLength": 260,
  "gasUsed": 194260,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint above current price second position in same range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 126974,
=======
  "calldataByteLength": 260,
  "gasUsed": 125269,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint around current price add to position existing 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 179169,
=======
  "calldataByteLength": 260,
  "gasUsed": 177266,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint around current price new position mint first in range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 304077,
=======
  "calldataByteLength": 260,
  "gasUsed": 301698,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint around current price second position in same range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 179169,
=======
  "calldataByteLength": 260,
  "gasUsed": 177266,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint below current price add to position existing 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 127695,
=======
  "calldataByteLength": 260,
  "gasUsed": 125990,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint below current price new position mint first in range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 282176,
=======
  "calldataByteLength": 260,
  "gasUsed": 280045,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint below current price second position in same range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 127695,
=======
  "calldataByteLength": 260,
  "gasUsed": 125990,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 161498,
=======
  "calldataByteLength": 324,
  "gasUsed": 159498,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 155793,
=======
  "calldataByteLength": 324,
  "gasUsed": 153793,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 182491,
=======
  "calldataByteLength": 324,
  "gasUsed": 180491,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 223959,
=======
  "calldataByteLength": 324,
  "gasUsed": 221959,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 173101,
=======
  "calldataByteLength": 324,
  "gasUsed": 171101,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 161498,
=======
  "calldataByteLength": 324,
  "gasUsed": 159498,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 155881,
=======
  "calldataByteLength": 324,
  "gasUsed": 153881,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 174663,
=======
  "calldataByteLength": 324,
  "gasUsed": 172663,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 216106,
=======
  "calldataByteLength": 324,
  "gasUsed": 214106,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #mint above current price add to position existing 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 119917,
=======
  "calldataByteLength": 260,
  "gasUsed": 118212,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #mint above current price new position mint first in range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 187570,
=======
  "calldataByteLength": 260,
  "gasUsed": 185439,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #mint above current price second position in same range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 119917,
=======
  "calldataByteLength": 260,
  "gasUsed": 118212,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #mint around current price add to position existing 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 172112,
=======
  "calldataByteLength": 260,
  "gasUsed": 170209,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #mint around current price new position mint first in range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 295256,
=======
  "calldataByteLength": 260,
  "gasUsed": 292877,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #mint around current price second position in same range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 172112,
=======
  "calldataByteLength": 260,
  "gasUsed": 170209,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #mint below current price add to position existing 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 133044,
=======
  "calldataByteLength": 260,
  "gasUsed": 131339,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #mint below current price new position mint first in range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 288862,
=======
  "calldataByteLength": 260,
  "gasUsed": 286731,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #mint below current price second position in same range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 356,
  "gasUsed": 133044,
=======
  "calldataByteLength": 260,
  "gasUsed": 131339,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 148865,
=======
  "calldataByteLength": 324,
  "gasUsed": 146865,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 143160,
=======
  "calldataByteLength": 324,
  "gasUsed": 141160,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 169858,
=======
  "calldataByteLength": 324,
  "gasUsed": 167858,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 211326,
=======
  "calldataByteLength": 324,
  "gasUsed": 209326,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 160468,
=======
  "calldataByteLength": 324,
  "gasUsed": 158468,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 148865,
=======
  "calldataByteLength": 324,
  "gasUsed": 146865,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 143248,
=======
  "calldataByteLength": 324,
  "gasUsed": 141248,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 162030,
=======
  "calldataByteLength": 324,
  "gasUsed": 160030,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 420,
  "gasUsed": 203473,
=======
  "calldataByteLength": 324,
  "gasUsed": 201473,
>>>>>>> e4d6147 (use custom sentinel storage)
}
`;
